# exchange_bot

./: .gitignore  Cargo.toml  Gopkg.toml  README.md  commands.go  configuration.go  errors.go  go.mod  go.sum  handler.go  iex.go  iex_test.go  log.go  main.go  portfolio.go  route-events.go  route-status.go  routes.go  server.go  token.go  user.go
archive/: commands.go  configuration.go  go.sum  main.go  portfolio.go  routes.go  token.go
archive/assets/: README.md  iex.go
assets/: cryptocompare.go  cryptocompare_test.go  iex.go
src/: api.rs  asset.rs  handlers.rs  main.rs  portfolio.rs  user.rs
src/alphavantage/: mod.rs
src/alphavantage/stock/: quote.rs
src/iex/: mod.rs
src/iex/stock/: mod.rs  quote.rs
src/processor/: mod.rs
src/slack/: event_handler.rs  event_wrapper.rs  mod.rs
src/slack/api/: chat.rs  mod.rs
src/slack/event/: app_mention.rs  mod.rs  url_verification.rs
