[package]
name = "exchange_bot"
version = "0.1.0"
authors = ["Jun Woo Shin <shin.junwoo97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.3"
lazy_static = "1.4.0"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[dev-dependencies]
tokio-test = "0.4"
